--- a/src/component/video_item/videoItem.module.css
+++ b/src/component/video_item/videoItem.module.css
@@ -6,6 +6,12 @@
     width: 50%;
 }
 
+@media screen and (max-width: 48rem) {
+  .container.grid {
+    width: 100%;
+  }
+}
+
 .container.list {
     width: 100%;
 }
